fix(Styling): OZF-901 classification banner z-index problem

--- a/app/styles/listing/_admin-owner-listing-tile.scss
+++ b/app/styles/listing/_admin-owner-listing-tile.scss
@@ -89,7 +89,6 @@
 
     top: 0px;
     right: 0px;
-    z-index: 1;
     border: 0px solid $gray-lighter;
 
     > input {
